--- a/employee_tasks/auctions/static/auctions/styles.css
+++ b/employee_tasks/auctions/static/auctions/styles.css
@@ -1,7 +1,7 @@
 html {
-    padding: 20px;
+    /* padding: 20px; */
     font-family: Arial, Helvetica, sans-serif;  
-    background-color: rgb(162, 236, 162);
+    /* background-color: rgb(162, 236, 162); */
     
      
 }
@@ -15,7 +15,7 @@ img.card-img-top {
     margin:1.5vh;
     /* /* border:2px !important; not working */
     /* border:1px !important! */
-    border-color:black !important;
+    /* border-color:black !important; */
 }
 
 img.listPage{
