--- a/employee_tasks/auctions/templates/auctions/layout.html
+++ b/employee_tasks/auctions/templates/auctions/layout.html
@@ -35,6 +35,9 @@
                 <a class="nav-link" href="{% url 'active' %}">Inventory</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'videos' %}">Videos</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'categories' %}">Categories</a>
             </li>
             <li class="nav-item">
