--- a/employee_tasks/auctions/templates/auctions/employeePage.html
+++ b/employee_tasks/auctions/templates/auctions/employeePage.html
@@ -118,7 +118,7 @@
     {% for comment in comments %}
     <li class="list-group-item"> {{comment.message}} 
     <br><p>posted by <strong>{{comment.author}}</strong></p>
-    <br>{{comment.datetime}}
+    <br>{{comment.datetime}} EST
     </li>
      
     {% endfor %}
