--- a/employee_tasks/auctions/templates/auctions/employees.html
+++ b/employee_tasks/auctions/templates/auctions/employees.html
@@ -1,6 +1,7 @@
 {% extends "auctions/layout.html" %}
 
     {% block body %}
+    <div style="margin:1.5vh">
         <h2> Active Employees </h2>
         <!-- change this to displaySection -->
         <form action="{% url 'displaySection' %}" method = "POST" class="my-4 ">
@@ -32,5 +33,6 @@
             </div>  
            
     {% endfor %}
+    </div>
 </div>
 {% endblock %}  
