--- a/employee_tasks/auctions/templates/auctions/layout.html
+++ b/employee_tasks/auctions/templates/auctions/layout.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="nav-bar" class="d-flex flex-row" style="background-color: rgb(142, 214, 142)"">
-               <a href="/"><img src="https://www.grrreendog.com/wp-content/uploads/2019/02/grrreendog-grooming-and-spa-daycamp-big.png" style="height:10vh" alt="greendog_logo"> </a>
+               <a href="/"><img src="https://www.grrreendog.com/wp-content/uploads/2019/02/grrreendog-grooming-and-spa-daycamp-big.png" style="height:10vh;margin:0" alt="greendog_logo"> </a>
                <a href="/"><h2 style="color:black; font-family:'Times New Roman', Times, serif">Tasks</h2></a>
 
         </div>
