Added Timestamps, Added Inventory Counter

--- a/employee_tasks/auctions/templates/auctions/createTask.html
+++ b/employee_tasks/auctions/templates/auctions/createTask.html
@@ -265,10 +265,10 @@ buttons.forEach(button => {
     <div class="side-bar">
         <h1 style="text-align:center;color:rgb(251, 150, 25)">Salon</h1><br>
         
-        <button class="task" id="task1" data-task="Sanitize Tables">Sanitize Tables</button>
-        <button class="task" id="task2" data-task="Sanitize Floors">Sanitize Floors</button>
-        <button class="task" data-task="Mop Floors">Mop Floors</button>
-        <button class="task" data-task="Wipedown Walls">Wipedown Walls</button>
+        <button class="task" id="task1" data-task="Sanitize Tables">Sanitize Salon Tables</button>
+        <button class="task" id="task2" data-task="Sanitize Floors">Sanitize Salon Floors</button>
+        <button class="task" data-task="Mop Floors">Mop Salon Floors</button>
+        <button class="task" data-task="Wipedown Walls">Wipedown Salon Walls</button>
         <button class="task" data-task="Clean Brushes & Combs" value="Clean Brushes & Combs">Clean Brushes+Combs</button>
     </div>
 
@@ -277,6 +277,20 @@ buttons.forEach(button => {
         <button class="task" data-task="Mopping Daycare">Mopping Daycare</button>
         <button class="task" data-task="Sweeping Daycare">Sweeping Daycare</button>
         <button class="task" data-task="Sanitize Daycare">Sanitize Daycare</button>
+        <button class="task" data-task="Straighten supplies">Straighten Daycare Supplies</button>
+        <button class="task" data-task="">Wipe Daycare Window Sills</button>
+        <button class="task" data-task="">Clean daycare tarps</button>
+        <button class="task" data-task="">Straighten Supplies</button>
+        <button class="task" data-task="">Sweep Daycare Floors</button>
+        <button class="task" data-task="">Wash Dog Toys</button>
+        <button class="task" data-task="">Wash Licky Pads</button>
+
+
+        
+
+
+
+
     </div>
     <div class="side-bar">
         <h1 style="text-align:center;color:rgb(251, 150, 25)">Kitchen</h1><br>
@@ -288,21 +302,47 @@ buttons.forEach(button => {
         <button class="task" data-task="">Rug In Front of Sink</button>
         <button class="task" data-task="">Cabinets</button>
         <button class="task" data-task="">Dog Crates(when used)</button>
-        <button class="task" data-task="">Rugs for Maps</button>
-        <button class="task" data-task="">Corals</button>
-        <button class="task" data-task="">Rug In Front of Sink</button>
+        <button class="task" data-task="">Counters+Edges</button>
+        <button class="task" data-task="">Kitchen Sink and Table Floors</button>
 </div>
 
 <div class="side-bar" style="right:0">
     <h1 style="text-align:center;color:rgb(251, 150, 25)">Daily</h1><br>
+    <button class="task" data-task="">Safety Check</button>
     <button class="task" data-task="">All Dishes</button>
     <button class="task" data-task="">Sink</button>
     <button class="task" data-task="">Counter Top</button>
-    <button class="task" data-task="">Sweep Floor</button>
+    <button class="task" data-task="">Sweep Floors</button>
     <button class="task" data-task="">Mop Floor</button>
-    <button class="task" data-task="">Kitchen Table</button>
+    <button class="task" data-task="">Kitchen Tables</button>
+</div>
+
+<div class="side-bar" style="right:0">
+    <h1 style="text-align:center;color:rgb(251, 150, 25)">Supplies</h1><br>
+    <button class="task" data-task="">Check # Toilet Paper</button>
+    <button class="task" data-task="">Check # Paper Towels</button>
+    <button class="task" data-task="">Check # Kennel</button>
     
 </div>
 
+<div class="side-bar" style="right:0">
+    <h1 style="text-align:center;color:rgb(251, 150, 25)">Bathroom</h1><br>
+    <button class="task" data-task="">Bathroom Sink + Toilet</button>
+    <button class="task" data-task="">Bathroom Floors</button>
+    <button class="task" data-task="">Bathroom Shelves</button>
+    <button class="task" data-task="">Bathroom Mats</button>
+    <button class="task" data-task="">Bathroom Sink</button>
+
+
+</div>
+
+<div class="side-bar" style="right:0">
+    <h1 style="text-align:center;color:rgb(251, 150, 25)">Bathing Room</h1><br>
+    <button class="task" data-task="">2 Tubs</button>
+    <button class="task" data-task="">Bathing Floors</button>
+    <button class="task" data-task="">Bathing Mats</button>
+    <button class="task" data-task="">Shampoo Machine</button>
+    <button class="task" data-task="">Slop sink</button>
+</div>
 
 {% endblock %}
