Made unique timestamps for inventory with last user

--- a/employee_tasks/auctions/templates/auctions/listing.html
+++ b/employee_tasks/auctions/templates/auctions/listing.html
@@ -1,6 +1,16 @@
 {% extends "auctions/layout.html" %}
 {% block body %}
 
+<script>
+    function increment(value) {
+    var number = document.getElementById("number");
+    newValue = parseInt(number.value) + value;
+    if (newValue >= 0) {
+      number.value = newValue;
+    }
+  }
+</script>
+
 <div class="row mx-3">
     {% if user.is_authenticated %}
         {% if isListingInWatchlist %}
@@ -23,8 +33,19 @@
 </div>
 <img src="{{listingData.imageURL}}" class="listPage" style="height:50vh;width:50vh"><br>
 <p> <h3 class="description">{{listingData.description}}<br>
-${{listingData.price}}</h3>
-</p>
+Inventory: {{listingData.count}}</h3>
+
+<form action="{% url 'listing' id=listingData.id %}" method="POST">
+    {% csrf_token %}
+<div class="form-group">
+    <label for="count">Choose Count:</label>
+    <button type="button" onclick="increment(-1)">-</button>
+    <input type="text" name="number" id="number" value="{{listingData.count}}" style="width:2%">
+    <button type="button" onclick="increment(1)">+</button>
+    <button type="submit" class="btn btn-success">Submit</button>     
+</div>
+</form>
+Last updated by: {{lastTimestamp}}
 
     <h2>Comments</h2>
     {% if user.is_authenticated %}
