Added Inventory Items, Fixed Category Search

--- a/employee_tasks/auctions/static/auctions/styles.css
+++ b/employee_tasks/auctions/static/auctions/styles.css
@@ -2,7 +2,7 @@ html {
     /* margin: .1vh;
     font-family: Arial, Helvetica, sans-serif;  
     /* background-color: rgb(162, 236, 162); */
-    
+    margin: 1vh;
      
 }
 img.card-img-top {
