--- a/employee_tasks/auctions/templates/auctions/active.html
+++ b/employee_tasks/auctions/templates/auctions/active.html
@@ -1,6 +1,15 @@
+<style>
+    
+    #content{
+    margin-left:2vh;
+    }
+    
+</style>
 {% extends "auctions/layout.html" %}
 
+
     {% block body %}
+    <div id="content">
         <h2> Active Inventory </h2>
         <form action="{% url 'displayCategory' %}" method = "POST" class="my-4  ">
         {% csrf_token %}
@@ -31,6 +40,6 @@
            <br>
     {% endfor %}
 </div>
-{% load static %}
+</div>
 <!-- testing adding static here -->
 {% endblock %}  
