--- a/employee_tasks/auctions/templates/auctions/categories.html
+++ b/employee_tasks/auctions/templates/auctions/categories.html
@@ -6,7 +6,8 @@
     
     {% for category in categories %}
     <h5 style="color:rgb(0, 145, 255)"> 
-         <a href="auctions/{{category}}.html">{{category}} </h5> </a>
+         <!-- <a href="auctions/{{category}}.html">{{category}} </h5> </a> -->
+         <p>{{category}}</p>
      
 {% endfor %}
 
