--- a/employee_tasks/auctions/templates/auctions/layout.html
+++ b/employee_tasks/auctions/templates/auctions/layout.html
@@ -37,14 +37,20 @@
                 <a class="nav-link" href="{% url 'active' %}">Inventory</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'allComments' %}">Notices</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'create' %}">Create Inventory</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'videos' %}">Videos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'categories' %}">Categories</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
-            </li>
+            </li> -->
             {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
