--- a/employee_tasks/auctions/templates/auctions/employees.html
+++ b/employee_tasks/auctions/templates/auctions/employees.html
@@ -22,7 +22,7 @@
          {% for employee in activeEmployees %}
         
         <div class="card border-light mb-3 text-center">
-            <img style="margin-left:auto;margin-right:auto" class="card-img-top" src="{{employee.imageURL}}" alt="{{employee.employeeName}}>
+            <img style="margin-left:auto;margin-right:auto;height:25vh;" class="card-img-top" src="{{employee.imageURL}}" alt="{{employee.employeeName}}>
             <div class="card-body">
                 
               <p class="card-text"><h1 style="color:rgb(0, 200, 255)">{{employee.employeeName}}</h1><br>
