--- a/employee_tasks/auctions/templates/auctions/emptyListings.html
+++ b/employee_tasks/auctions/templates/auctions/emptyListings.html
@@ -24,8 +24,8 @@
         </form>
         <button type="button" class="btn btn-info"><a href="active" style="color:white">Reset listings</a></button>
         <br>
-        <label for="emptyListings">Show Unstocked Inventory:</label>
-        <button type="submit" style="margin-left: 3.5vh" class="btn btn-danger"><a href="emptyListings" style="color:white;">Empty Inventory</a></button>
+        <label for="category">Show Empty Inventory:</label>
+        <button type="submit" class="btn btn-danger">All listings</button>
 
         </div>
         <div class="row">
@@ -45,4 +45,4 @@
 </div>
 </div>
 <!-- testing adding static here -->
-{% endblock %}          
+{% endblock %}  
