--- a/employee_tasks/auctions/templates/auctions/layout.html
+++ b/employee_tasks/auctions/templates/auctions/layout.html
@@ -3,18 +3,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="shortcut icon" href="http://www.bamboodoghotel.com/wp-content/uploads/2015/07/PAW.png">
         <title>{% block title %}Tasks{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
         <script src="{% static 'auctions/scripts.js' %}"></script>
         <style>
-            
+            html {
+                background-color: rgb(162, 236, 162);
+                margin-left:0.5vh;
+                margin-right:0vh;
+            }
         </style>
     </head>
     <body>
         <div id="nav-bar" class="d-flex flex-row" style="background-color: rgb(142, 214, 142)"">
                <a href="/"><img src="https://www.grrreendog.com/wp-content/uploads/2019/02/grrreendog-grooming-and-spa-daycamp-big.png" style="height:10vh;margin:0" alt="greendog_logo"> </a>
-               <a href="/"><h2 style="color:black; font-family:'Times New Roman', Times, serif">Tasks</h2></a>
+               <a href="/"><h2 style="color:black; font-family:'Comic Sans MS', Comic, sans-serif">Tasks</h2></a>
 
         </div>
 
@@ -37,7 +42,10 @@
                 <a class="nav-link" href="{% url 'active' %}">Inventory</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'allComments' %}">Notices</a>
+                <a class="nav-link" href="{% url 'employeeComments' %}">Employee Noticeboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'inventoryComments' %}">Inventory Notices</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'create' %}">Create Inventory</a>
