--- a/employee_tasks/auctions/templates/auctions/create.html
+++ b/employee_tasks/auctions/templates/auctions/create.html
@@ -1,11 +1,11 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Create New Listing</h2>
+    <h2 style="color:purple">Create Inventory Listing</h2>
     <form action="{% url 'create' %}" method = "POST">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
+            <label for="title" class="form-label">Title (REQUIRED)</label>
             <input type="text" name="title" class="form-control" id="title" placeholder="Enter Title">
           </div>        
         <div class="mb-3">
@@ -13,7 +13,7 @@
             <input type="text" name="description" class="form-control" id="description" placeholder="Enter Description">
         </div>        
         <div class="mb-3">
-            <label for="imageURL" class="form-label">ImageURL</label>
+            <label for="imageURL" class="form-label">ImageURL (Default: QuestionMark)</label>
             <input type="text" name="imageURL" class="form-control" id="imageURL" placeholder="https://...">
         </div>        
         <!-- <div class="mb-3">
@@ -23,7 +23,7 @@
         </div>         -->
 
         <div class="form-group">
-            <label for="category">Choose an item type:</label>
+            <label for="category"><b><i>Choose Item Section:</i></b></label>
             <select name="category" id="category">
                 <option selected>Choose category</option>
                 {% for category in categories %}
@@ -31,8 +31,11 @@
                 {% endfor %}
           </select>
         </div>
-        <button type="submit" class="btn btn-success">Create New Listing</button>
+        <button type="submit" class="btn btn-danger">Create New Listing</button>
+        <button type="submit" class="btn btn-success"><a href="active" style="color:white">Back To Inventory</a></button>
 
     </form>
+    <br>
+
     
 {% endblock %}
